/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package view;

/**
 *
 * @author asuna
 */

public enum BuildMode {
    NONE,
    ROAD,
    BRIDGE,
    STOP,
    GARAGE,
    ROUTE
}
